# inno

./: README.md  pyproject.toml
src/inno/: __init__.py  main.py
tests/: test_capture_open.py  test_cli_utils.py  test_run_defaults.py
