[project]
name = "inno"
version = "0.1.0"
description = "Simple OpenCV webcam viewer with JSON camera settings."
readme = "README.md"
authors = [{ name = "Luis Maya Aranda", email = "nonfatmatcha@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy==1.26.4", "opencv-python==4.11.0.86"]

[project.scripts]
inno = "inno.main:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2"]
